css color + text

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,176 @@
+:root {
+    --basiccolor: #212121;
+    --title-textcolor: #757575;
+    --accentcolor: #2196F3;
+    --background-footercolor: #2F303A;
+}
+
 body {
     background-color: #F5F5F5;
+    color: var(--basiccolor) ;
+
+    font-family: Roboto, sans-serif;
+    letter-spacing: 0.03em;
+}
+
+.list {
+    list-style: none; 
+}
+
+
+/* header style */
+
+.logo {
+    color: var(--accentcolor);
+    font-size: 26px;
+    text-decoration: none;
+    font-family: Raleway, sans-serif;
+    line-height: 1.2;
+}
+
+.logo-part {
+    color: #000000;
+    text-decoration: none;
+}
+
+.menu .link {
+    color: var(--title-text-color);
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+}
+.menu .link:hover,
+.menu .link:focus {
+    color: var(--accentcolor);
+}
+
+.menu .link.current {
+    color: var(--accentcolor);
+}
+
+.contact .link {
+    color: var(--title-textcolor);
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+}
+
+.contact .link:hover,
+.contact .link:focus {
+    color: var(--accentcolor);
+    text-decoration: none;
+}
+
+
+/*cap*/
+
+.cap {
+    background-color: var(--background-footercolor);
+}
+
+.cap-title {
+    color: #ffffff;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.button-order {
+    color: #ffffff;
+    background-color: #2196F3;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+    letter-spacing: 0.06em;
+}
+
+
+/*features*/
+
+.section .section-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+
+}
+
+.features .title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+
+}
+
+.features .title-text {
+    color: var(--title-textcolor);
+    font-size: 14px;
+    line-height: 1.7;
+}
+
+
+/*what_we_do*/
+
+
+/*our_company*/
+
+.team .title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+}
+
+.team .title-text {
+    color: var(--title-textcolor);
+    font-size: 16px;
+    line-height: 1.2;
+}
+
+    
+  /*dasement*/
+
+  .footer {
+    background-color: var(--background-footercolor);
+}
+
+  .footer .logo-part {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.address-link {
+    color: #ffffff;
+    font-style: normal;
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 1.7;
+}
+
+.addres-link:hover,
+.addres-link:focus {
+    color: var(--accentcolor);
+    font-style: normal;
+}
+
+.contact-footer .link {
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.7;
+}
+
+.contact-footer .link.link:hover,
+.contact-footer .link.link:focus {
+    color: var(--accentcolor);
+    font-style: normal;
 }
